@@ -9,6 +9,7 @@
 ### Network
 
  * Added [Get-IPAddress](http://get-carbon.org/help/Get-IPAddress.html) function for getting the IPv4/IPv6 addresses currently in use on the local computer's network interfaces.
+ * Added [Test-IPAddress](http://get-carbon.org/help/Test-IPAddress.html) function for testing if an IP address is in use on one the local computer's network interfaces.
 
 ### Path
 
